third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/features/complex-expressions/alternate_exprs_range_nonlit_lower_bound.rs
const TWO: u8 = 2;

#[derive(num_enum::TryFromPrimitive)]
#[repr(u8)]
enum Numbers {
    Zero = 0,
    #[num_enum(alternatives = [TWO..=255])]
    NonZero = 1,
}

fn main() {

}
